--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -18,21 +18,21 @@
  *  Version: 0.4.2
  *
  * ------------------------------------------------------- */
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:300,300i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Fira+Mono&display=swap);
 
 
 :root {
   /* Fonts */
-  --text-font-family: 'Noto Sans';
+  --text-font-family: Montserrat;
   --text-font-is-google: 1;
   --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: Cabin;
+  --header-font-family: 'Josefin Sans';
   --header-font-is-google: 1;
   --header-font-family-fallback: Georgia, serif;
-  --code-font-family: 'Source Code Pro';
+  --code-font-family: 'Fira Mono';
   --code-font-is-google: 1;
   --base-font-size: 20px;
   --text-font-size: 1rem;
@@ -43,24 +43,23 @@
   --header-h3-font-size: 1.75rem;
 
   /* Colors */
-  --text-color: #000000;
-  --header-color: #0061AF;
+  --text-color: #272822;
+  --header-color: #399cbd;
   --background-color: #FFFFFF;
-  --link-color: #0061AF;
-  --text-bold-color: #0061AF;
+  --link-color: #399cbd;
+  --text-bold-color: #399cbd;
   --code-highlight-color: rgba(255,255,0,0.5);
-  --inverse-text-color: #000000;
-  --inverse-background-color: #FFFFFF;
-  --inverse-header-color: #8DD3E0;
-  --inverse-link-color: #0061AF;
-  --title-slide-background-color: #0061AF;
+  --inverse-text-color: #FFFFFF;
+  --inverse-background-color: #399cbd;
+  --inverse-header-color: #FFFFFF;
+  --inverse-link-color: #399cbd;
+  --title-slide-background-color: #399cbd;
   --title-slide-text-color: #FFFFFF;
-  --header-background-color: #0061AF;
+  --header-background-color: #399cbd;
   --header-background-text-color: #FFFFFF;
-  --primary: #0061AF;
-  --secondary: #FFFFFF;
+  --base: #399cbd;
   --white: #FFFFFF;
-  --black: #000000;
+  --black: #272822;
 }
 
 html {
@@ -69,7 +68,7 @@ html {
 
 body {
   font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
-  font-weight: normal;
+  font-weight: 300;
   color: var(--text-color);
 }
 h1, h2, h3 {
@@ -101,10 +100,10 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #0061AF;
+  color: #399cbd;
 }
 .remark-slide-number {
-  color: #0061AF;
+  color: #399cbd;
   opacity: 1;
   font-size: 0.9rem;
 }
@@ -152,10 +151,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #0061AF99;
+  color: #399cbd99;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #0061AF;
+  color: #399cbd;
 }
 .right-column {
   width: 75%;
@@ -177,7 +176,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #FFFFFF80;
+  border-left: solid 5px #399cbd80;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -194,7 +193,7 @@ th, td {
 .remark-slide table:not(.table-unshaded) thead,
 .remark-slide table:not(.table-unshaded) tfoot,
 .remark-slide table:not(.table-unshaded) tr:nth-child(even) {
-  background: #FFFFFF;
+  background: #D7EBF1;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -204,7 +203,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #FFFFFF;
+  background-color: #D7EBF1;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -274,17 +273,11 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   }
 }
 
-.primary {
-  color: var(--primary);
+.base {
+  color: var(--base);
 }
-.bg-primary {
-  background-color: var(--primary);
-}
-.secondary {
-  color: var(--secondary);
-}
-.bg-secondary {
-  background-color: var(--secondary);
+.bg-base {
+  background-color: var(--base);
 }
 .white {
   color: var(--white);
